syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/pigfall/demo-kratos-curdboy/api/user/v1;pbuser";

service User{
  rpc Create(google.protobuf.Struct) returns(UserCreateResponse){
    option (google.api.http) = { post:"/user" body:"*"  };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { summary:"Create User"};
  };

  rpc Query(curdboy.common.QueryRequest) returns(UserQueryResponse){
    option (google.api.http) = { get:"/user"  };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = { summary:"Find User"  };

  };
}

message UserCreateResponse{
  int32 id =1;
}

message UserQueryResponse{
  UserQueryResponseMeta meta =1;
  repeated google.protobuf.Struct data=2;
}

message  UserQueryResponseMeta {
  int64 count =1;
}